add fibonacci serie and finish project

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
-<div class="d-flex">
+<div>
 
-  <app-sidebar></app-sidebar>
+  <app-navbar></app-navbar>
 
-  <app-movies-page class="container">
-  </app-movies-page>
+  <router-outlet></router-outlet>
 
 </div>
