--- a/src/app/movies/movies-page/movies-page.component.html
+++ b/src/app/movies/movies-page/movies-page.component.html
@@ -1,10 +1,10 @@
-<div class="row p-3">
-  <div class="col">
-  <app-search></app-search>
+<div class="row section-news">
+  <div class="col-sm-12 col-md-2 col-lg-2">
+    <app-sidebar></app-sidebar>
   </div>
-</div>
-<hr>
 
-<div class="row">
-  <app-results></app-results>
+  <div class="col-sm-12 col-md-8 col-lg-8">
+      <app-search></app-search>
+  </div>
+
 </div>
