--- a/src/app/movies/search/search.component.html
+++ b/src/app/movies/search/search.component.html
@@ -1,4 +1,5 @@
-<h5>Buscar:</h5>
+<div class="">
+  <h5>Buscar:</h5>
     <input
       type="text"
       class="form-control"
@@ -6,3 +7,10 @@
       (keyup.enter)="search()"
       #txtSearch
     >
+</div>
+
+
+    <div class="container__cards">
+      <app-results></app-results>
+    </div>
+
