--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
-<div class="bg-dark border-right p-3" id="sidebar">
-  <h3 class="text-light">Gifs App</h3>
+<div class="bg-dark" id="sidebar">
+  <h3 class="text-light">Latest searches</h3>
   <hr class="text-white"/>
   <div class="list-group list-reset" >
     <a href="#"
